// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BranchCoverage should render correctly 1`] = `
<div
  className="display-inline-flex-center"
>
  <CoverageRating
    size="small"
    value="95.9943"
  />
  <span
    className="little-spacer-left"
  >
    96.0%
  </span>
  <HelpTooltip
    className="little-spacer-left"
    overlay="branches.measures.new_coverage.help"
  />
</div>
`;

exports[`BranchDuplications should render correctly 1`] = `
<div
  className="display-inline-flex-center"
>
  <DuplicationsRating
    size="small"
    value={3.5}
  />
  <span
    className="little-spacer-left"
  >
    3.5%
  </span>
  <HelpTooltip
    className="little-spacer-left"
    overlay="branches.measures.new_duplicated_lines_density.help"
  />
</div>
`;

exports[`BranchMeasures should render correctly when coverage is missing 1`] = `
<div
  className="display-inline-flex-center"
>
  <BranchDuplications
    className=""
    measure={
      Object {
        "metric": "new_duplicated_lines_density",
        "periods": Array [
          Object {
            "index": 1,
            "value": "3.5",
          },
        ],
      }
    }
  />
</div>
`;

exports[`BranchMeasures should render coverage and duplications 1`] = `
<div
  className="display-inline-flex-center"
>
  <BranchCoverage
    measure={
      Object {
        "metric": "new_coverage",
        "periods": Array [
          Object {
            "index": 1,
            "value": "95.9943",
          },
        ],
        "value": "0",
      }
    }
  />
  <BranchDuplications
    className="big-spacer-left"
    measure={
      Object {
        "metric": "new_duplicated_lines_density",
        "periods": Array [
          Object {
            "index": 1,
            "value": "3.5",
          },
        ],
      }
    }
  />
</div>
`;
